--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 
         </div>
         <div id="bottom">
-            <div onclick="Menu(1);" id="btm_left">⚙️ Sozlash</div>
-            <div onclick="Menu(2);" id="btm_center">🚀 Boshlash</div>
-            <div onclick="Menu(3);" id="btm_right">📚 Tanlash</div>
+            <div onclick="Menu(1);" id="btm_left">⚙️ </div>
+            <div onclick="Menu(2);" id="btm_center">🚀 Start</div>
+            <div onclick="Menu(3);" id="btm_right">📚 </div>
         </div>
     </div>
     <script src="voc_data.js"></script>
